whole site is draft honestly, but new pages were accidentally marked draft

--- a/public/group/index.html
+++ b/public/group/index.html
@@ -130,6 +130,28 @@
 <article class="mh4 mt2 mw7-l nested-copy-line-height nested-img center">
 
   
+    <section class="cf measure-wide-l left pa4 f4 lh-copy "><p>The research team
+<figure>
+    <img src="https://qiti-serv.iqc.uwaterloo.ca/QITI/projects/QITI-Website/public/images/group/2019-GroupPhotoQITI.jpg"/> 
+</figure>
+
+Group trip to Niagara falls!
+<figure>
+    <img src="https://qiti-serv.iqc.uwaterloo.ca/QITI/projects/QITI-Website/public/images/group/2019-NiagaraTrip.jpg"/> 
+</figure>
+
+QITI-Ions are friendly with Ions in Prof. Crystal Senko’s group, forming a bigger IQC-Ions group!
+<figure>
+    <img src="https://qiti-serv.iqc.uwaterloo.ca/QITI/projects/QITI-Website/public/images/group/2019-GroupPhotoIons.jpg"/> 
+</figure>
+
+Old group photos
+<figure>
+    <img src="https://qiti-serv.iqc.uwaterloo.ca/QITI/projects/QITI-Website/public/images/group/2018-GroupPhoto.jpg"/> 
+</figure>
+</p>
+</section>
+  
   <section class="flex-ns flex-wrap justify-around mt1 mt4-l">
     
     
