pushed new students to the server

--- a/public/members/qinghao-zhang/index.html
+++ b/public/members/qinghao-zhang/index.html
@@ -43,7 +43,7 @@
 
 
 
-<meta itemprop="keywords" content="COOP,zqinghao," /><meta name="twitter:card" content="summary"/>
+<meta itemprop="keywords" content="COOP,zqinghao,alumn," /><meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Qinghao Zhang"/>
 <meta name="twitter:description" content="For his PHYS 437 BSc Physics project, Qinghao is numerically investigating noise sources in trapped-ion quantum simulations."/>
 
