--- a/public/members/rajibul-islam/index.html
+++ b/public/members/rajibul-islam/index.html
@@ -153,6 +153,10 @@ MathJax = {
         <h1 class="f1 mt0">
           Dr. K. Rajibul Islam
           
+            <a itemprop="sameAs" content="https://orcid.org/0000-0002-6483-8932" href="https://orcid.org/0000-0002-6483-8932" target="orcid.widget" rel="me noopener noreferrer" style="vertical-align:top;">
+            <img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" alt="ORCID iD icon">
+            </a>
+          
        </h1>
       </header>
       <div class="nested-copy-line-height lh-copy f4 nested-links dark-gray">
