--- a/public/members/sainath-motlakunta/index.html
+++ b/public/members/sainath-motlakunta/index.html
@@ -144,6 +144,10 @@ MathJax = {
         <h1 class="f1 mt0">
           Sainath Motlakunta
           
+            <a itemprop="sameAs" content="https://orcid.org/0000-0001-6710-3897" href="https://orcid.org/0000-0001-6710-3897" target="orcid.widget" rel="me noopener noreferrer" style="vertical-align:top;">
+            <img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" alt="ORCID iD icon">
+            </a>
+          
        </h1>
       </header>
       <div class="nested-copy-line-height lh-copy f4 nested-links dark-gray">
