minor content change

--- a/public/research/index.html
+++ b/public/research/index.html
@@ -731,7 +731,7 @@ MathJax = {
   
     
     <a href="http://dx.doi.org/10.1038/s41534-019-0147-x" target="_blank" class="link dark-gray dim">
-      npj Quantum Inf 5, 32, (2019)
+      npj Quantum Information 5, 32, (2019)
     </a>
   
   
